--- a/models/custom_yolov5s.yaml
+++ b/models/custom_yolov5s.yaml
@@ -1,13 +1,11 @@
 # parameters
-nc: 80  # number of classes
-depth_multiple: 1.0  # model depth multiple
-width_multiple: 1.0  # layer channel multiple
+nc: 1  # number of classes
+depth_multiple: 0.33  # model depth multiple
+width_multiple: 0.50  # layer channel multiple
 
 # anchors
 anchors:
-  - [10,13, 16,30, 33,23]  # P3/8
-  - [30,61, 62,45, 59,119]  # P4/16
-  - [116,90, 156,198, 373,326]  # P5/32
+  - [116,116]  # P5/32
 
 # YOLOv5 backbone
 backbone:
@@ -44,5 +42,5 @@ head:
    [[-1, 10], 1, Concat, [1]],  # cat head P5
    [-1, 3, BottleneckCSP, [1024, False]],  # 23 (P5/32-large)
 
-   [[17, 20, 23], 1, Detect, [nc, anchors]],  # Detect(P3, P4, P5)
+   [[23], 1, Detect, [nc, anchors]],  # Detect(P3, P4, P5)
   ]
