--- a/models/yolov5s.yaml
+++ b/models/yolov5s.yaml
@@ -34,7 +34,7 @@ head:
    [-1, 1, Conv, [256, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, 'nearest']],
    [[-1, 4], 1, Concat, [1]],  # cat backbone P3
-   [-1, 3, BottleneckCSP, [256, False]],  # 17 (P3/8-small)
+   [-1, 3, BottleneckCSP, [256, False]],  # 17 (P3/8-small) # specialiezed in detecting large objects
 
    [-1, 1, Conv, [256, 3, 2]],
    [[-1, 14], 1, Concat, [1]],  # cat head P4
